--- a/public/admin-assets/scss/accordion.scss
+++ b/public/admin-assets/scss/accordion.scss
@@ -3,9 +3,9 @@
   // Collapsible Closed
   details{
     margin: 1rem auto;
-    background-color: #e7e7e7a8;
-    border-radius: 0.5rem;
-    box-shadow: 0px 1px 1px 1px rgb(0 0 0 / 10%);
+    background-color: #fff;
+    border-radius: 0.2rem;
+    box-shadow: 0px 2px 0px -1px rgba(0, 0, 0, 0.1);
     
     &:not([open]){
       animation-name: fold-in;
@@ -17,7 +17,7 @@
       align-items: center;
       justify-content: space-between;
       font-weight: 600;
-      padding: 0.7rem;
+      padding: 0.4rem;
     }
     
     // Disable browser default marker
@@ -29,8 +29,9 @@
     
     // Custom marker
     summary::after{
-      content: "+";
-      font-size: 1.5rem;
+      content: "\F282";
+      font-family: 'bootstrap-icons';
+      font-size: 0.8rem;
       font-weight: 400;
       line-height: 1;
       margin-right: 1rem;
@@ -38,16 +39,18 @@
     }
     
     .content{
-      padding: 0 1.5rem 1.5rem;
+      padding: 1.5rem 0.5rem 1.5rem;
     }
   }
   
+
   // Collapsible OPEN
   details[open]{
     
     // Custom marker
     summary::after{
-      content: "−";
+      content: "\F286";
+      font-family: 'bootstrap-icons';
     }
     
     .content{
