--- a/public/assets/css/vertical-light.css
+++ b/public/assets/css/vertical-light.css
@@ -13561,8 +13561,8 @@ input[type="button"].btn-block {
 @media (max-width: 991.98px) {
   .navbar-expand-lg > .container,
   .navbar-expand-lg > .container-fluid, .navbar-expand-lg > .container-sm, .navbar-expand-lg > .container-md, .navbar-expand-lg > .container-lg, .navbar-expand-lg > .container-xl {
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: 25px;
+    padding-left: 25px;
   }
 }
 
