--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -22691,13 +22691,54 @@ code {
 }
 
 /* Dropdowns */
+.dropdown,.dropup {
+  position: relative
+}
+
+.dropdown-toggle::after {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .255em;
+  vertical-align: .255em;
+  content: "";
+  border-top: .3em solid;
+  border-right: .3em solid transparent;
+  border-bottom: 0;
+  border-left: .3em solid transparent
+}
+
+.dropdown-toggle:empty::after {
+  margin-left: 0
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 1000;
+  display: none;
+  float: left;
+  min-width: 10rem;
+  padding: .5rem 0;
+  margin: .125rem 0 0;
+  font-size: .675rem;
+  color: #212529;
+  text-align: left;
+  list-style: none;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid rgba(0,0,0,.15);
+  border-radius: .25rem
+}
+
 .dropdown .dropdown-toggle:after {
   border-top: 0;
   border-right: 0;
   border-left: 0;
   border-bottom: 0;
-  font: normal normal normal 24px/1 "themify";
-  content: "\e64b";
+  font: normal normal normal 24px/1 "bootstrap-icons";
+  content: "\F229";
   width: auto;
   height: auto;
   vertical-align: middle;
@@ -22708,18 +22749,32 @@ code {
 
 .dropdown .dropdown-menu {
   margin-top: 2px;
-  font-size: 0.875rem;
+  font-size: 0.675rem;
   box-shadow: 0px 1px 15px 1px rgba(230, 234, 236, 0.35);
 }
 
 .dropdown .dropdown-menu .dropdown-item {
-  font-size: .875rem;
+  font-size: .675rem;
   padding: .25rem 1.5rem;
 }
 
 .dropdown .dropdown-menu .dropdown-item:active {
   background: initial;
 }
+.dropdown-item {
+  display: block;
+  width: 100%;
+  padding: .25rem 1.5rem;
+  clear: both;
+  font-weight: 400;
+  color: #212529;
+  text-align: inherit;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0;
+}
+
+
 
 /* Forms */
 .form-group {
