--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -8789,6 +8789,10 @@ blockquote {
 b,
 strong {
   font-weight: bolder;
+  overflow: hidden;
+  display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
 }
 
 small {
