--- a/public/admin-assets/scss/width-height.scss
+++ b/public/admin-assets/scss/width-height.scss
@@ -15,15 +15,32 @@ $tablets_maxwidth: 28px;
 $tablets_minheight: 28px;
 $tablets_maxheight: 28px;
 
-$laptop_minwidth: 9.5px;
+$laptop_minwidth: 14.5px;
 $laptop_maxwidth: 14.5px;
-$laptop_minheight: 9.5px;
+$laptop_minheight: 14.5px;
 $laptop_maxheight: 14.5px;
 
 $desktop_minwidth: 19.5px;
 $desktop_maxwidth: 19.5px;
 $desktop_minheight: 19.5px;
 $desktop_maxheight: 19.5px;
+
+
+$_minwidth: 25.5px;
+$_maxwidth: 25.5px;
+$_minheight: 25.5px;
+$_maxheight: 25.5px;
+
+
+.cqw-#{$num} {
+  min-width: calc(#{$num} * #{$_minwidth}) !important;
+  max-width: calc(#{$num} * #{$_maxwidth}) !important;
+}
+.cqh-#{$num} {
+  min-height: calc(#{$num} * #{$_minheight}) !important;
+  max-height: calc(#{$num} * #{$_maxheight}) !important;
+}
+
 
 // Mobile 
 @media (max-width: 576px) and (min-height: 768px) {
