--- a/public/assets/css/vertical-light.css
+++ b/public/assets/css/vertical-light.css
@@ -8737,6 +8737,10 @@ h1, h2, h3, h4, h5, h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  overflow: hidden;
+  display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
 }
 
 abbr[title],
@@ -8784,6 +8788,10 @@ blockquote {
 b,
 strong {
   font-weight: bolder;
+  overflow: hidden;
+  display: -webkit-box;
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
 }
 
 small {
@@ -13415,7 +13423,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #007bff;
+  background-color: #124f31ed;
 }
 
 .nav-fill > .nav-link,
@@ -30688,5 +30696,8 @@ div.tagsinput span.tag a {
     display: none;
   }
 }
+
+
+
 
 /*# sourceMappingURL=../maps/vertical-layout-light/style.css.map */
