--- a/public/admin-assets/css/custom.css
+++ b/public/admin-assets/css/custom.css
@@ -522,6 +522,17 @@ border: 1px solid #3e557f !important; }
     overflow-x: auto; /* Add vertical scrollbar */
 }
 
+.dots-bg {
+  --dot-bg: white;
+  --dot-color: black;
+  --dot-size: 1px;
+  --dot-space: 22px;
+	background:
+		linear-gradient(90deg, var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
+		linear-gradient(var(--dot-bg) calc(var(--dot-space) - var(--dot-size)), transparent 1%) center / var(--dot-space) var(--dot-space),
+		var(--dot-color);
+}
+
 
 .sub-menu {
     padding: 10px 8px;
