--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -103,16 +103,22 @@ p.justify{
     user-select: none;
 }
 
+.banner {
+  background: linear-gradient(45deg, rgba(98, 156, 148, 0.75), rgba(19, 115, 104, 0.75));
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
   
-  .banner-1{
-    background: linear-gradient(45deg,
-    rgba(98, 156, 148, 0.75),
-    rgba(19, 115, 104, 0.75)),
-    url('../admin-assets/media/programs/banner-1.jpg');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.banner-1{
+  background: linear-gradient(45deg,
+  rgba(98, 156, 148, 0.75),
+  rgba(19, 115, 104, 0.75)),
+  url('../admin-assets/media/programs/banner-1.jpg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .banner-2{
