--- a/public/assets/css/vertical-light.css
+++ b/public/assets/css/vertical-light.css
@@ -15744,6 +15744,16 @@ a.close.disabled {
   vertical-align: text-top !important;
 }
 
+.bg-center {
+  background-position: center !important;
+}
+.bg-cover {
+  background-size: cover !important;
+}
+.bg-norepeat {
+  background-repeat: no-repeat !important;
+}
+
 .bg-primary, .settings-panel .color-tiles .tiles.primary {
   background-color: #6993ff !important;
 }
@@ -16890,7 +16900,7 @@ button.bg-dark:focus,
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1030;
+  z-index: 55;
 }
 
 @supports (position: sticky) {
