--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -111,7 +111,7 @@ p.justify{
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, rgba(98, 156, 148, 0.75), rgba(19, 115, 104, 0.75));
+  background: linear-gradient(25deg, rgb(16 104 94 / 78%), rgb(0 114 101 / 85%), rgb(2 111 88 / 78%));
   background-blend-mode: multiply;
 }
   
